# slint-rust-template

./: Cargo.toml  Makefile  README.md  cargo-generate.toml
generate/: cleanup.rhai  rename.rhai  template-README.md
template-ui/: Cargo.toml
template-ui/i18n/en/: app_template.ftl
template-ui/src/: i18n.rs  main.rs
